2.5.1
-----
1. Ensure no volume commands are performed unless relevant dialog open.
2. Re-add podcast searching, will be removed once LMS8.2 is released.
3. Fix adding (LMS 8.2) podcast feed to favourites.
4. Add 'More' menu to playlists and years.

2.5.0
-----
 1. Fix text colour of album and track listings in now-playing if using a light
    theme with coloured toolbars.
 2. Don't allow to select sub-toolbar text, fixes odd issue on Android Chrome
    where pressing back button from seach field causes 'Music' to be selected!
 3. Disable ripple effects on subtoolbar buttons only.
 4. Disable button hover via setting CSS from javascript for mobile. Should not
    be required, but seems buttons remain stuck in hover after pressing.
 5. Show menu button, in 'Manage players' dialog, for fixed volume players where
    volume control is hidden.
 6. Minor tweaks for more Material Design 2 appearance.
 7. Better support for LM 8.2 podcasts plugin.
 8. Make contents of create/edit group dialog scrollable.
 9. Try not to show server/player settings page status messages in a toast if
    these have already been shown in an alert.
10. Fix showing multiple artists, etc, in track details.
11. Remove Material's podcast search facility, as podcast plugin in LMS 8.2
    has its own.

2.4.6
-----
1. Don't add sort field when adding an album to queue after navigating to album
   list via artist.
2. Fix navigating back to now-playing if click on browse link in now-playing
   info using mobile layout.
3. Fix browse incorrectly navigating back if main menu is closed with 'esc'
   event.
4. Fix show artist biography for tracks with multiple artists.

2.4.5
-----
1. Try to remove hanging 'Click' on server update message - this is with older
   versions of LMS.
2. When showing update/restart dialog due to status message, only go to link
   if 'Download'/'Restart' button is clicked, just close dialog on 'Cancel'